--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,8 @@ edition = "2021"
 
 [lib]
 name = "rust_backend"
-crate_type = ["cdylib", "rlib"]
+crate_type = "rlib"
 
-[dependencies]
-fltk = "^1.4"
-
+[dependencies]
 palette = "0.7.2"
-image = "0.24.6"
-pyo3 = {version = "0.19.2", features = ["extension-module"]}
+image = "0.24.6"
