--- a/LVIE/Cargo.toml
+++ b/LVIE/Cargo.toml
@@ -10,6 +10,7 @@ image = "0.24.7"
 winit = "0.28.6"
 i-slint-backend-winit = "=1.1.0"
 rfd = "0.11.4"
+LVIElib = {path = "..\\LVIElib"}
 
 [build-dependencies]
 slint-build = "1.1.0"
