--- a/LVIElib/Cargo.toml
+++ b/LVIElib/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "convolution"
+name = "LVIElib"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "LVIElib"
 
 [dependencies]
 rustfft = "6.1.0"
