--- a/LVIE/Cargo.toml
+++ b/LVIE/Cargo.toml
@@ -12,6 +12,7 @@ i-slint-backend-winit = "=1.1.0"
 rfd = "0.11.4"
 LVIElib = {path = "../LVIElib"}
 indexmap = "1.7.0"
+itertools = "0.11.0"
 
 [build-dependencies]
 slint-build = "1.1.0"
