--- a/LVIE/Cargo.toml
+++ b/LVIE/Cargo.toml
@@ -13,6 +13,7 @@ rfd = "0.11.4"
 LVIElib = {path = "../LVIElib"}
 indexmap = "1.7.0"
 itertools = "0.11.0"
+rayon = "1.8.0"
 
 
 [build-dependencies]
