x11 support and splines rendering via bezier curve

--- a/LVIE/Cargo.toml
+++ b/LVIE/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 slint = "1.3.0"
 image = "0.24.7"
-winit = "0.28.6"
+winit = {version = "0.28.6", features = ["x11"]}
 i-slint-backend-winit = "=1.3.0"
 rfd = "0.11.4"
 LVIElib = {path = "../LVIElib"}
