--- a/LVIE/Cargo.toml
+++ b/LVIE/Cargo.toml
@@ -16,6 +16,7 @@ indexmap = "1.7.0"
 itertools = "0.11.0"
 rayon = "1.8.1"
 num-traits = "0.2.16"
+rawloader = "0.37.1"
 
 [build-dependencies]
 slint-build = "1.3.0"
