--- a/Tests/Cargo.toml
+++ b/Tests/Cargo.toml
@@ -4,6 +4,5 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
-rawloader = "0.37.1"
-image = "0.24.7"
-num = "0.4.1"
+quick-xml = {version="0.31.0", features=["serialize"]}
+serde = { version = "1.0", features = ["derive"] }
