--- a/LVIE/Cargo.toml
+++ b/LVIE/Cargo.toml
@@ -20,6 +20,8 @@ quick-xml = {version="0.31.0", features=["serialize"]}
 serde = { version = "1.0", features = ["derive"] }
 uuid = {version="1.9.1", features=["v4"]}
 bytemuck = "1.12"
+downcast-rs = "1.2.1"
+paste = "1.0"
 
 [build-dependencies]
 slint-build = "1.6.0"
